JIRA BLA-222 - Fixed z-index on homepage location jump.

--- a/less/common/locations.less
+++ b/less/common/locations.less
@@ -52,7 +52,7 @@
             right: 0;
             bottom: 0;
             width: 62px;
-            z-index: 10;
+            z-index: 101;
             position: absolute; 
             border-right: 0px solid transparent;
             border-left: 158px solid transparent; 
